@@ -1,3 +1,8 @@
+2006-04-03  Lars Povlsen  <lpovlsen@vitesse.com>
+ 
+ 	* src/flash.c (fis_update_directory): Fixed flash region size when
+	CYGSEM_REDBOOT_FLASH_COMBINED_FIS_AND_CONFIG is enabled.
+ 
 2006-03-27  Gary Thomas  <gary@mlbassoc.com>
 
 	* src/net/tcp.c (__tcp_write_block): Fix calculation of actual
